--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: "Cabin", sans-serif;
+}
+
+a:focus,
+button:focus {
+    outline: none;
+    border: none;
+}
